[package]
name = "here_we_are"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

# Win - Setup Dev Env: 
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
