[package]
name = "here_we_are"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["debug"]
debug = ["bevy/dynamic_linking", "bevy/filesystem_watcher"]

[dependencies]

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    #"async-io", DAMN YOU MAIN DOCS
    "wayland",
    "x11",
    #"zstd",
    #"webgl2",
    "serialize",
    "png",
    "hdr",
    "multi-threaded",
    "symphonia-flac",
    #"subpixel_glyph_atlas",

    "bevy_winit",
    "bevy_ui",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_gilrs",
    "bevy_animation",
    "bevy_audio",
    "bevy_asset",
    "bevy_core_pipeline",
    #"android_shared_stdcxx", TODO: Android Support
]
